--- a/sass/theme/_twostep02_theme.scss
+++ b/sass/theme/_twostep02_theme.scss
@@ -285,7 +285,7 @@
         #course-description-pre-license {
             .card-body {
                 text-align: left;
-                height: 23rem;
+                height: 23rem!important;
             }
         }
     }
